@@ -1,0 +1,2 @@
+#%PAM-1.0
+password	required	pam_cracklib.so
